# arabic-voice-agent

./: .env.example  .gitignore  .posthog-project  .release-please-config.json  .release-please-manifest.json  .worktreeinclude  AUDIO_TOGGLE_USAGE.md  CHANGELOG.md  README.md  arabic-voice-agent.code-workspace  claude.md  docker-compose.yml  render.yaml
livekit-agent/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  Taskfile.yml  livekit.toml  pyproject.toml  requirements.txt  taskfile.yaml
livekit-agent/src/: __init__.py  agent.py  app.py  config.py  main.py
livekit-agent/src/agents/: __init__.py  assistant.py
livekit-agent/src/chat_context/: __init__.py  initial_context.py
livekit-agent/src/functions/: __init__.py
livekit-agent/src/llm/: __init__.py  instructions.py  openai_gpt_4o_mini.py
livekit-agent/src/stt/: soniox.py
livekit-agent/src/tts/: __init__.py  arabic_female.py
web-api/: .env.example  .gitignore  =0.4.1  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  taskfile.yaml
web-api/agent/: agents_config.py
web-api/agent/arabic/: __init__.py  arabic_agent.py  arabic_agent_hooks.py  arabic_instructions.py
web-api/agent/onboarding/: README.md  __init__.py  onboarding_agent.py  onboarding_instructions.py  system.md
web-api/agent/parrot/: __init__.py  parrot_agent.py  parrot_hooks.py  parrot_instructions.py
web-api/agent/tutor/: __init__.py  tutor_agent.py  tutor_agent_hooks.py  tutor_instructions.py
web-api/agent/welcome_back/: system.md  welcome_back_agent.py  welcome_back_instructions.py
web-api/channels/: __init__.py
web-api/channels/chat/: __init__.py  routes.py  session_loop.py  turn_dispatcher.py
web-api/channels/rest/: __init__.py
web-api/channels/voice/: __init__.py  pipeline.py  processors.py  routes.py
web-api/dependencies/: admin_auth.py  auth.py
web-api/harness/: __init__.py  agent_loop.py  components.py  context.py  highlights.py  options.py  response.py  runner.py  scaffolding.py  session.py  session_manager.py  turn.py
web-api/livekit_routes/: __init__.py  models.py  routes.py
web-api/pipeline/: __init__.py  processors.py  runner.py
web-api/routes/: admin.py  config.py  content.py  flashcards.py  lessons.py  livekit.py  realtime_pipecat.py  realtime_session.py  session.py  webhooks.py  wimmelbilder.py
web-api/scripts/: fake_tts.py
web-api/services/: __init__.py  agent_service.py  agent_session.py  content_service.py  context_service.py  flashcard_service.py  lesson_service.py  pipecat_service.py  plan_service.py  posthog_service.py  scaffolding_service.py  session_service.py  soniox_service.py  stripe_service.py  supabase_client.py  telemetry.py  transcript_service.py  tts_service.py  user_service.py  websocket_service.py  wimmelbilder_service.py
web-api/tests/: README.md  conftest.py
web-api/tests/test_routes/: test_billing.py  test_session.py
web-api/tests/test_services/: test_agent_service.py  test_content_service.py  (+2 more)
(+420 files in other folders)
