[project]
name = "web-api"
version = "0.1.0"
description = "LiveKit token server API"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.34.0",
    "livekit-api>=1.0.7",
    "pydantic>=2.10.3",
    "python-dotenv>=1.0.1",
    "openai-agents>=0.4.1",
]

[project.scripts]
dev = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"
